--- a/webapps/ROOT/WEB-INF/classes/templates/modules/rank/edit_rank.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/rank/edit_rank.html
@@ -305,6 +305,7 @@
                             </template>
                         </el-table-column>
                         <el-table-column prop="name" label="人物名称" width=""></el-table-column>
+                        <el-table-column prop="institutionName" label="所在机构" width=""></el-table-column>
                         <el-table-column prop="weight" label="排序" width="150">
                             <template slot-scope="scope">
                                 <el-input type="text" maxlength="6" style="width: 100px;" v-model="scope.row.weight" auto-complete="off" @change="peopleRankWeightChange(scope.row)"></el-input>
