--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meetingenter_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meetingenter_list.html
@@ -93,7 +93,7 @@
                     <el-table-column prop="meetingEndTime" label="结束时间" width="170"></el-table-column>
                     <el-table-column label="操作" width="130" fixed="right">
                         <template slot-scope="scope">
-                            <el-button type="text" size="small" @click="addOrEditMeeting(1,scope.row)">修改</el-button>
+                            <el-button v-if="scope.row.meetingStatus == 1" type="text" size="small" @click="addOrEditMeeting(1,scope.row)">修改</el-button>
                             <el-button v-if="scope.row.meetingStatus == 1" type="text" size="small" @click="onlineThisMeeting(scope.row)">发布</el-button>
                             <el-button v-if="scope.row.meetingStatus == 0" type="text" size="small" @click="offlineThisMeeting(scope.row)">下线</el-button>
                             <el-button v-if="scope.row.meetingStatus == '1'"  type="text" size="small" @click="deleteThisMeeting(scope.row)">删除</el-button>
